# id-sast-csharp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  debug_dfg.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tesconeection.py
cli/: scanner.py
config/: engine_config.yaml  rules_config.yaml  settings.py
core/ai/: csharp_prompt_builder.py  gemini_client.py  rule_generator.py
core/analyzers/: csharp_pattern_matcher.py  framework_analyzer.py  semantic_analyzer.py  taint_analyzer.py  vulnerability_classifier.py
core/graph/: csharp_graph_model.py  graph_serializer.py  taint_propagator.py
core/parsers/: ast_importer.py  cfg_builder.py  dfg_builder.py  framework_detector.py  roslyn_client.py
core/rules/: rule_loader.py
database/: analysis_repository.py  mongodb.py  rule_repository.py
docs/thesis/: .$id-sast-csharp-c4-container.drawio.bkp  diseno-arquitectonico-integracion-multilenguaje.drawio  id-sast-csharp-c4-container.drawio
reports/: console_report.py  html_report.py  json_report.py  sarif_report.py
roslyn_bridge/: Program.cs  RoslynBridge.csproj
roslyn_bridge/Extractors/: CfgExtractor.cs  DfgExtractor.cs  SemanticExtractor.cs  SymbolResolver.cs
roslyn_bridge/Models/: CfgBlock.cs  ExportSchema.cs  SemanticNode.cs
roslyn_bridge/Serializers/: AstJsonSerializer.cs
roslyn_bridge/publish/: RoslynBridge.deps.json  web.config
scripts/: build_roslyn_bridge.ps1
src/id_sast_csharp/: __init__.py  __main__.py
tests/: conftest.py
tests/integration/: test_health.py  test_path_traversal_api.py  test_scan_api.py  (+1 more)
(+111 files in other folders)
