[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "id-sast-csharp"
version = "0.1.0"
description = "ID-SAST C# microservice with API and CLI entry points"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "python-dotenv>=1.0",
  "pymongo>=4.8",
  "networkx>=3.3",
  "google-generativeai>=0.8",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
id-sast-csharp = "id_sast_csharp.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
